# LoopModels

./: .clang-format  .clang-tidy  .clangd  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  Address_8cxx_source.html  Address_8hpp_source.html  Allocators_8hpp_source.html  ArrayIndex_8hpp_source.html  ArrayOps_8hpp_source.html  ArrayReference_8hpp_source.html  Array_8cxx_source.html  Array_8hpp_source.html  AxisTypes_8hpp_source.html  BBCosts_8cxx_source.html  BBPredPath_8cxx_source.html  BBPredPath_8hpp_source.html  Bipartite_8hpp_source.html  BitSets_8hpp_source.html  Builder_8hpp_source.html  BumpMapSet_8hpp_source.html  BumpMap_8hpp_source.html  BumpSet_8hpp_source.html  BumpVector_8hpp_source.html  CMakeLists.txt  CacheOptimization_8cxx_source.html  Cache_8cxx_source.html  Cache_8hpp_source.html  CallableStructs_8hpp_source.html  CodeGeneration_8hpp_source.html  Comparators_8cxx_source.html  Comparators_8hpp_source.html  Comparisons_8hpp_source.html  Constraints_8hpp_source.html  Constructors_8hpp_source.html  ControlFlowMerging_8cxx_source.html  ControlFlowMerging_8hpp_source.html  CostFunction_8cxx_source.html  (+1747 more)
.github/workflows/: ci.yml  dependabot.yml  doc.yml
benchmark/: CMakeLists.txt  benchmark.cpp  compileAndRun.sh  compile_commands.json  constraint_pruning_benchmark.cpp  highway_benchmark.cpp  map_benchmark.cpp  polynomial_benchmark.cpp  vector.cpp
benchmark/include/: constraint_pruning_benchmark.hpp  map_benchmark.hpp  matrix_exp.hpp  simplex_benchmark.hpp  vector.hpp
cmake/: CPM.cmake  homebrew.cmake
examples/: analyzescev  dot.ll  generator.jl  loop.ll  loop_annotated.ll  loopscev  loopstore.ll  nestedloop_1.ll  nestedloop_2.ll  nestedloop_2scev  optimizedloop.ll  symnestedloop_1.ll  symnestedloop_2.ll  twoloops.ll
experiments/: README.md  generator.jl  useful.commands
experiments/depth1boundsSLPrefsSL/: llvmir.ll  source.jl
experiments/depth1boundsSLrefsSC/: llvmir.ll  source.jl
experiments/depth1boundsSLrefsSL_dot/: llvmir.ll  source.jl
experiments/depth1boundsSLrefsSL_sum/: llvmir.ll  source.jl
experiments/depth1boundsSNrefsSL_min/: llvmir.ll  source.jl
experiments/depth2boundsDLrefsSL/: llvmir.ll  source.jl
experiments/depth2boundsSLPrefsSLP/: llvmir.ll  source.jl
experiments/depth2boundsSLrefsDL/: delinearize.analyzed  dominfo.analyzed  llvmir.ll  loopnest.analyzed  phivalues.analyzed  scev.analyzed  source.jl
experiments/depth2boundsSLrefsDL_2/: delinearize.analyzed  llvmir.ll  source.jl
experiments/depth2boundsSLrefsDN/: delinearize.analyzed  llvmir.ll  source.jl
experiments/depth2boundsSLrefsDN_hard/: delinearize.analyzed  llvmir.ll  source.jl
experiments/depth2boundsSLrefsSL/: delinearize.analyzed  llvmir.ll  scev.analyzed  source.jl
experiments/depth2boundsSLrefsSLP/: llvmir.ll  source.jl
experiments/depth2boundsSLrefsSL_vecOfVec/: llvmir.ll  source.jl
include/: .clang-tidy  AbstractEqualityPolyhedra.hpp  Address.hpp  ArrayIndex.hpp  ArrayReference.hpp  Bipartite.hpp  BitSets.hpp  CallableStructs.hpp  Comparators.hpp  Constraints.hpp  ControlFlowMerging.hpp  CostModeling.hpp  Dependence.hpp  Dependencies.hpp  DependencyPolyhedra.hpp  EmptyArrays.hpp  Graphs.hpp  GreatestCommonDivisor.hpp  ILPConstraintElimination.hpp  Instruction.hpp  IntegerMap.hpp  IntermediateRepresentation.hpp  LinearAlgebra.hpp  LinearDiophantine.hpp  LoopBlock.hpp  LoopForest.hpp  Loops.hpp  Macro.hpp  Math.hpp  MathUtilities.hpp  MatrixStringParse.hpp  Memory.hpp  MemoryAccess.hpp  NormalForm.hpp  Orthogonalize.hpp  POSet.hpp  Permutation.hpp  Polyhedra.hpp  Predicate.hpp  Rational.hpp  (+35 more)
include/Containers/: BumpMap.hpp  (+6 more)
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  TurboLoop.cpp  TurboLoopPass.cpp  UnitStep.cpp  cmake_install.cmake
mod/: CMakeLists.txt  RemarkAnalysis.cxx
mod/Backends/: CodeGeneration.cxx
mod/Dicts/: BumpVector.cxx  Dict.cxx  Linear.cxx  MapVector.cxx  Trie.cxx
mod/Frontends/: Builder.cxx  LLVM.cxx
mod/Graphs/: Bipartite.cxx  Graphs.cxx  IndexGraphs.cxx
mod/IR/: Address.cxx  Array.cxx  BBPredPath.cxx  Cache.cxx  ControlFlowMerging.cxx  IR.cxx  Instruction.cxx  InstructionCost.cxx  Node.cxx  OrthogonalAxes.cxx  Phi.cxx  Predicate.cxx  TreeResult.cxx  Users.cxx
mod/LinearProgramming/: LoopBlock.cxx  ScheduledNode.cxx
mod/Optimize/: ArrayTransform.cxx  BBCosts.cxx  CacheOptimization.cxx  Cost.cxx  CostFunction.cxx  CostModeling.cxx  IRGraph.cxx  LeakyReluCost.cxx  Legality.cxx  LoopTransform.cxx  MemoryCost.cxx  MicroKernelOptimization.cxx  RegisterLife.cxx  RegisterUse.cxx  Unrolls.cxx
mod/Polyhedra/: Comparators.cxx  Dependence.cxx  DependencyPolyhedra.cxx  Loops.cxx  Polyhedra.cxx  Schedule.cxx
mod/Support/: Iterators.cxx  LLVMUtils.cxx  OStream.cxx  Permutation.cxx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+35 more)
src/: CMakeLists.txt  main.cpp
test/: ArrayReference.hpp  CMakeLists.txt  TestUtilities.cxx  TestUtilities.hpp  bitset_test.cpp  bumpmap_test.cpp  cache.cpp  comparator_test.cpp  compat_test.cpp  cost_modeling_test.cpp  dependence_meanstddev_test.cpp  dependence_test.cpp  dependence_test2.cpp  dict_test.cpp  edge_detection_test.cpp  graph_test.cpp  highs_test.cpp  index_graph_test.cpp  ir_test.cpp  leak_warning_suppressions.txt  linear_algebra_test.cpp  linear_diophantine_test.cpp  matrix_test.cpp  normal_form_test.cpp  orthogonalize_test.cpp  perm_test.cpp  permutation_test.cpp  poset_test.cpp  remarks_test.cpp  simple_dependence_test.cpp  simplex_test.cpp  string_to_intmat_test.cpp  symbolics_test.cpp  triangular_solve_test.cpp  unimodularization_test.cpp
test/examples/: triangular_solve.ll  triangular_solve.txt
tools/: prettyprinters.py
(+82 files in other folders)
